// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Loading login renders correctly 1`] = `
"<div className=\\"Login bp3-dark\\">
  <Blueprint3.Card className=\\"login-card bp3-elevation-4\\" elevation={0} interactive={false}>
    <div className=\\"login-body\\">
      <Blueprint3.NonIdealState description=\\"Logging In...\\" icon={{...}} />
    </div>
  </Blueprint3.Card>
</div>"
`;

exports[`Login renders correctly 1`] = `
"<div className=\\"Login bp3-dark\\">
  <Blueprint3.Card className=\\"login-card bp3-elevation-4\\" elevation={0} interactive={false}>
    <div className=\\"login-header\\">
      <Component>
        <Blueprint3.Icon icon=\\"lock\\" />
        LOGIN
      </Component>
    </div>
    <div className=\\"login-body\\">
      <Blueprint3.ButtonGroup fill={true} vertical={true}>
        <LoginButton handleClick={[Function: handleLogin]} name=\\"LumiNUS\\" id=\\"nusnet_id\\" />
        <NavLink to=\\"/playground\\">
          <Blueprint3.Button className=\\"bp3-large\\" rightIcon=\\"code\\">
            Try out the playground
          </Blueprint3.Button>
        </NavLink>
      </Blueprint3.ButtonGroup>
    </div>
  </Blueprint3.Card>
</div>"
`;
